# vm-allocator

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE-BSD-3-Clause  README.md  coverage_config_x86_64.json
.github/: dependabot.yml
benches/: benchmarks.rs
src/: address_allocator.rs  id_allocator.rs  interval_tree.rs  lib.rs
src/allocation_engine/: DESIGN.md  README.md  interval_tree.rs  mod.rs
