[package]
name = "vm-allocator"
version = "0.1.1"
description = "Helpers for allocating resources needed during the lifetime of a VM."
repository = "https://github.com/rust-vmm/vm-allocator"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
readme = "README.md"
keywords = ["resources", "allocation", "address", "virt"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[dependencies]
libc = "0.2.39"
thiserror = "2.0"
serde = { version = "1.0.137", optional = true, features = ["derive"] }
